# pufferlib-rust

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLI_SPEC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MASTER_PLAN.md  PERFORMANCE.md  README.md  ROADMAP.md  ROADMAP_V2.md  ROADMAP_V3.md  SPECIFICATION.md  VERSIONS  audit_report.md  audit_report_2.md  build_err.txt  cli_chk.txt  engineering_plan.md  metadata.json  setup_libtorch.ps1
.github/workflows/: rust.yml
checkpoints/: checkpoint_000100.json  checkpoint_000100.pt  checkpoint_000200.json  checkpoint_000200.pt  checkpoint_000300.json  checkpoint_000300.pt
crates/pufferlib/: Cargo.toml  pyproject.toml
crates/pufferlib-bevy/: Cargo.toml
crates/pufferlib-bevy/src/: lib.rs
crates/pufferlib-cli/: Cargo.toml
crates/pufferlib-cli/src/: hpo.rs  main.rs
crates/pufferlib-cli/tests/: integration_tests.rs
crates/pufferlib-envs/: Cargo.toml
crates/pufferlib-envs/src/: bandit.rs  cartpole.rs  hetero_mock.rs  identity_continuous.rs  lib.rs  memory.rs  mock_marl.rs  squared.rs
crates/pufferlib-python/: Cargo.toml
crates/pufferlib-python/src/: lib.rs
crates/pufferlib-rpc/: Cargo.toml  build.rs
crates/pufferlib-rpc/proto/: remote_env.proto
crates/pufferlib-rpc/src/: lib.rs
crates/pufferlib-wasm/: Cargo.toml
crates/pufferlib-wasm/src/: lib.rs
crates/pufferlib/examples/: embedded_inference.rs  profile_training.rs  repro_panic.rs
crates/pufferlib/src/: lib.rs
crates/pufferlib/src/checkpoint/: manager.rs  mod.rs  state.rs
crates/pufferlib/src/dapo/: config.rs  mod.rs  trainer.rs
crates/pufferlib/src/dreamer/: config.rs  mod.rs  models.rs  planner.rs  rssm.rs  trainer.rs
crates/pufferlib/src/env/: emulation.rs  gym.rs  mod.rs  pettingzoo.rs  traits.rs  wrappers.rs
crates/pufferlib/src/grpo/: config.rs  mod.rs  trainer.rs
crates/pufferlib/src/log/: console.rs  logger.rs  mod.rs  tensorboard.rs
crates/pufferlib/src/mappo/: buffer.rs  config.rs  critic.rs  env.rs  mod.rs  trainer.rs
crates/pufferlib/src/offline/: buffer.rs  dt.rs  mod.rs  trainer.rs
crates/pufferlib/src/policy/: cnn.rs  distribution.rs  llm.rs  lstm.rs  luminal.rs  mlp.rs  mod.rs  onnx.rs  shield.rs  verified.rs
crates/pufferlib/src/spaces/: box.rs  dict.rs  discrete.rs  mod.rs  multi_discrete.rs  tree.rs  tuple.rs
crates/pufferlib/src/training/: buffer.rs  config.rs  constitutional.rs  curriculum.rs  distributed.rs  exploration.rs  hpo.rs  logging.rs  mod.rs  optimizer.rs  ppo.rs  reward_model.rs  rlhf.rs  safe_ppo.rs  self_play.rs  trainer.rs
crates/pufferlib/src/utils/: mod.rs
crates/pufferlib/src/vector/: async_vec.rs  mod.rs  parallel.rs  serial.rs  vecenv.rs  windows_shared.rs
docs/: DEVELOPER_HANDBOOK.md  GAP_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  TESTING_STRATEGY.md  UPGRADE_GUIDE.md
docs/v2/: ARCHITECTURE.md  CONTRIBUTING.md  README.md
docs/v2/algorithms/: DECISION_TRANSFORMER.md  GRPO.md  MAPPO.md  WORLD_MODELS.md
docs/v2/ecosystem/: BACKENDS.md  INTEROP.md
docs/v2/production/: CHECKPOINTING.md  DISTRIBUTED.md  LOGGING.md
docs/v2/research/: LLM_POLICIES.md  SAFE_RL.md
tests/: parity_tests.rs  test_emulation.rs  test_serialization.rs
