[workspace]
resolver = "2"
members = [
    "crates/pufferlib",
    "crates/pufferlib-envs",
    "crates/pufferlib-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PufferLib Contributors"]
license = "MIT"
repository = "https://github.com/101amolkadam/pufferlib-rust"
description = "High-performance reinforcement learning library in Rust"
keywords = ["reinforcement-learning", "rl", "machine-learning", "rust", "pufferlib"]
categories = ["science", "mathematics", "artificial-intelligence"]
readme = "README.md"
documentation = "https://docs.rs/pufferlib-rust"
homepage = "https://github.com/101amolkadam/pufferlib-rust"



[workspace.dependencies]
# Core dependencies
ndarray = { version = "0.16", features = ["serde-1"] }
ndarray-rand = "0.15"
rand = { version = "0.8", features = ["serde"] }
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_distr = "0.4"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
num-traits = "0.2"
ordered-float = "4.5"
smallvec = { version = "1.13", features = ["serde"] }
indicatif = "0.17"
