[package]
name = "pufferlib-envs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in environments for PufferLib"

[dependencies]
pufferlib = { path = "../pufferlib" }
ndarray = { workspace = true, features = ["serde-1"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
