[package]
name = "pufferlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance reinforcement learning library"

[features]
default = []
torch = ["tch"]
candle = ["candle-core", "candle-nn", "candle-transformers"]

[dependencies]
# Core dependencies
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

# Neural networks - optional, requires libtorch installed
tch = { version = "0.17", optional = true }

# Pure Rust neural networks - optional
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }

# Parallelism
rayon = { workspace = true }
crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
num-traits = { workspace = true }
ordered-float = { workspace = true }
smallvec = { workspace = true }
indicatif = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
criterion = "0.5"
pufferlib-envs = { path = "../pufferlib-envs" }
ndarray = { workspace = true }
