[package]
name = "pufferlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance reinforcement learning library"

[lib]
name = "pufferlib"


[features]
default = ["std"]
std = ["anyhow/std", "thiserror/std", "serde/std", "serde_json/std", "ndarray/std", "ndarray/serde", "rand/std", "rand_distr/std"]
torch = ["std", "tch", "torch-sys"]
candle = ["std", "candle-core", "candle-nn", "candle-transformers"]
burn = ["burn-core", "burn-ndarray"]
luminal = ["dep:luminal"]
hf-hub = ["dep:hf-hub"]
onnx = ["dep:ort"]
llm = ["dep:llm-chain"]
# Checkpointing features
checkpoint = ["bincode"]
checkpoint-compressed = ["checkpoint", "flate2"]
# Logging features
tensorboard = ["tensorboard-rs"]
# Python integration
python = ["pyo3", "numpy"]


[dependencies]
# Core dependencies
ndarray = { workspace = true, features = ["serde"] }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

# Neural networks - optional, requires libtorch installed
tch = { workspace = true, optional = true }
torch-sys = { workspace = true, optional = true }

# Pure Rust neural networks - optional
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }

burn-core = { workspace = true, optional = true, default-features = false }
burn-ndarray = { workspace = true, optional = true, default-features = false }

luminal = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
llm-chain = { workspace = true, optional = true }

# Parallelism
rayon = { workspace = true }
crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }

# Serialization
serde = { workspace = true, features = ["alloc", "derive"] }
serde_json = { workspace = true }
bincode = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }

# Logging
tracing = { workspace = true }
tensorboard-rs = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
num-traits = { workspace = true }
ordered-float = { workspace = true }
smallvec = { workspace = true }
indicatif = { workspace = true }
puffin = { workspace = true }

hashbrown = { workspace = true }

# Python bindings (optional for PettingZoo support)
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }


[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
pufferlib-envs = { path = "../pufferlib-envs" }
ndarray = { workspace = true }
tempfile = { workspace = true }

[[example]]
name = "repro_panic"
required-features = ["torch"]

[[example]]
name = "profile_training"
required-features = ["torch"]
